# boltimg

./: CMakeLists.txt
app/: CMakeLists.txt  app_main.c  bolty-window.ui  bolty.gresource.xml  bolty_app.c  bolty_app.h  bolty_image.c  bolty_image.h  bolty_main.c  bolty_window.c  bolty_window.h
bench/: CMakeLists.txt  bench_conv.cpp  main.cpp
src/: CMakeLists.txt  boltimg.c  boltimg.h  boltimg_impl_avx2.c  boltimg_impl_avx512.c  boltimg_impl_scalar.c  boltimg_impl_sse2.c  boltimg_impl_sse4.c
test/: CMakeLists.txt  main.cpp  test_conv.cpp
